chore: nitpick fixes